@@ -28,7 +28,6 @@ $base-border-radius: 3px;
 $base-spacing: $base-line-height * 1em;
 $base-z-index: 0;
 $small-spacing: $base-spacing / 2;
-$sidebar-width: 150px;
 
 // Transitions
 $base-easing: cubic-bezier(0.215, 0.610, 0.355, 1);
